--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>React Skeleton</title>
 </head>
 <body>
-
+  <div class="ingredients"></div>
 <script src="js/bundle.js"></script>
 </body>
 </html>
